# E3-Core

./: Cargo.toml  LICENSE  README.md
admin-node/: Cargo.toml
admin-node/src/: admin_node.rs  consensus_poa.rs  contract_policy.rs  kafka_publisher.rs  main.rs
e3-core-lib/: Cargo.toml
e3-core-lib/src/: block.rs  blockchain.rs  lib.rs  network_config.rs  p2p.rs  peer_discovery.rs  rpc.rs  storage.rs  tokenomics.rs
e3-core-lib/src/wallet/: manager.rs  mod.rs  proof_of_reserve.rs  transaction.rs  types.rs  user_wallet.rs  validator_wallet.rs
e3-wallet/: Cargo.toml  README.md  WALLET_CLI_USAGE.md
e3-wallet/src/: main.rs  wallet.rs
examples/: smart_contract_governance_demo.rs  wallet_system_demo.rs
governance-node/: Cargo.toml  README.md
governance-node/src/: api.rs  dao_node.rs  did.rs  integration.rs  kafka_emitter.rs  main.rs  mod.rs  proposal.rs  reporting.rs  smart_contract.rs  smart_contract_backup.rs  smart_contract_new.rs  treasury.rs  vote.rs
public-node/: Cargo.toml  README.md
public-node/src/: consensus_pos.rs  kafka_consumer.rs  kafka_publisher.rs  main.rs  public_node.rs  smart_contract_executor.rs
scripts/: test_smart_contracts.sh
src/: REMOVED_P2P_FILES.md  admin_node.rs  events.rs  lib.rs  main.rs  network_config.rs  node.rs  p2p.rs  public_node.rs  tokens.rs
src/wallet/: merchant_wallet.rs  signature.rs  treasury_wallet.rs
tests/: blockchain_tests.rs  governance_integration_test.rs
wallets/: Test.wallet  default.wallet
