[package]
name = "admin-node"
version = "0.1.0"
edition = "2021"
description = "Admin node for E3 Core DAO - handles minting, burning, and reserve management"

[[bin]]
name = "admin-node"
path = "src/main.rs"

[dependencies]
# Core blockchain library
e3-core-lib = { path = "../e3-core-lib" }

# Cryptography
ed25519-dalek = "1.0"
sha2 = "0.10"

# Web framework
axum = "0.7"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Kafka
rdkafka = { version = "0.36", features = ["tokio"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# HTTP API
warp = "0.3"

# Logging
log = "0.4"
env_logger = "0.10"
