[package]
name = "e3-core-lib"
version = "0.1.0"
edition = "2021"
description = "Shared blockchain library for E3 Core DAO"

[dependencies]
# Cryptography
ed25519-dalek = "1.0"
blst = "0.3"
sha2 = "0.10"
rand_core = "0.6"
rand = "0.7"

# P2P Networking
libp2p = { version = "0.51", features = ["gossipsub", "mdns", "kad", "request-response", "tcp", "noise", "yamux", "tokio", "macros"] }
tokio = { version = "1.0", features = ["full"] }

# Storage
sled = "0.34"
rocksdb = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Time and async
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
uuid = { version = "1.17.0", features = ["v4"] }
async-trait = "0.1"

# Logging
log = "0.4"
tracing = "0.1"
