
[package]
name = "e3-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
bip39 = "2"
ed25519-dalek = "2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
hex = "0.4"
sha2 = "0.10"
aes-gcm = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
rpassword = "7"
base64 = "0.21"
