[package]
name = "public-node"
version = "0.1.0"
edition = "2021"
description = "Public node for E3 Core DAO - handles user transactions and PoS consensus"

[[bin]]
name = "public-node"
path = "src/main.rs"

[dependencies]
# Core blockchain library
e3-core-lib = { path = "../e3-core-lib" }

# Cryptography
ed25519-dalek = "1.0"
sha2 = "0.10"

# Web framework
axum = "0.7"
futures = "0.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Kafka
rdkafka = { version = "0.36", features = ["tokio"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# HTTP API
warp = "0.3"

# Encoding/Hashing
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }

# Logging
log = "0.4"
env_logger = "0.10"
